RMR-5 Fixing spacing between header and burger menu

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -17,13 +17,13 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 1vh 1vw;
+  padding: 1%;
   background-color: #f0f0f0;
-  border-bottom: 0.1vh solid #ccc;
+  // border-bottom: 0.1vh solid #ccc;
   position: fixed;
   top: 0;
   left: 0;
-  width: 98%;
+  width: 100%;
   max-height: 7%;
   z-index: 1000;
 }
